--- a/app/src/main/res/layout/activity_search_repositories.xml
+++ b/app/src/main/res/layout/activity_search_repositories.xml
@@ -61,7 +61,7 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyle"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
